# desi

./: DESIGN.md  HACKING.md  README.md  TODO.md  meson.build  meson_options.txt  sse-spec.md  sse.dict
examples/: chat_advanced.c  chat_simple.c  chat_stream.c  tool_loop.c
include/: jstok.h
include/llm/: internal.h  json_core.h  llm.h
src/: json_build.c  json_build.h  json_core.c  jstok_impl.c  llm.c  llm_transport_contract.h  protocol_chat.c  protocol_completions.c  protocol_embeddings.c  sse.c  sse.h  tools_accum.c  tools_accum.h  tools_loop.c  transport_curl.c  transport_curl.h
src/daemons/agentd/: main.c  meson.build
src/daemons/desid/: main.c  meson.build
src/daemons/mcpd/: main.c  meson.build
src/internal/: http1_server.c  http1_server.h
tests/: fake_transport.c  fake_transport.h  fuzz_json_spans.c  fuzz_sse_config.c  fuzz_sse_fragmented.c  fuzz_sse_scanner.c  fuzz_sse_writer_roundtrip.c  fuzz_tool_accum.c  llmctl.c  run_fuzzers.sh  run_live_tests.sh  test_auth.c  test_cancellation.c  test_error_detail.c  test_errstr.c  test_http1_server.c  test_json_build.c  test_last_error.c  test_live.c  test_proxy.c  test_request_opts.c  test_sse_limits.c  test_sse_writer.c  test_stream_usage.c  test_tls.c  test_tool_calls_build.c  test_tool_delta_callbacks.c  test_tool_loop_requests.c  test_tool_message_helpers.c  test_tools_accum.c  test_transport.c  test_transport_contract.c
tests/fuzz_dicts/: json_spans.dict  sse.dict  tool_accum.dict
